# cocos4-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: test-runner.sh
src/: lib.rs  main.rs
src/2d/: label.rs  mod.rs  sprite.rs
src/3d/: asset.rs  baked_skinning.rs  mesh.rs  mod.rs  model.rs  skeletal_animation.rs  skinning.rs
src/application/: mod.rs  root.rs
src/audio/: decoder.rs  mod.rs  utils.rs
src/base/: data.rs  data.rs.bak  log.rs  mod.rs  object_pool.rs  refcount.rs  scheduler.rs  scheduler.rs.bak  threading.rs  timer.rs  types.rs  util.rs  value.rs
src/core/: animation.rs  command_buffer.rs  component_registry.rs  data.rs  debug_draw.rs  event.rs  event_bus.rs  event_target.rs  geometry.rs  memop.rs  mod.rs  scene-graph.rs  scriptable_object.rs  spatial_grid.rs  state_machine.rs
src/game/: director.rs  game.rs  mod.rs  scene_manager.rs
src/input/: input.rs  mod.rs  types.rs
src/math/: color.rs  geometry.rs  mat3.rs  mat4.rs  mathf.rs  mod.rs  quaternion.rs  vec2.rs  vec3.rs  vec4.rs
src/particle/: emitter.rs  extra_modules.rs  mod.rs  modules.rs  particle.rs  particle_system.rs
src/particle_2d/: mod.rs  particle_2d.rs  particle_system_2d.rs
src/physics/: character_controller.rs  joint.rs  mod.rs  rigid_body.rs  shape.rs  simulator.rs  world.rs
src/platform/: mod.rs  system_window_impl.rs
src/profiler/: counter.rs  mod.rs  perf_counter.rs  profiler.rs
src/renderer/: mod.rs
src/scene/: camera.rs  define.rs  directional_light.rs  light.rs  lights.rs  mod.rs  model.rs  render_scene.rs
src/serialization/: mod.rs  (+3 more)
(+100 files in other folders)
